# library-management-api/models/User.js
@@ -1,0 +1,39 @@
+import mongoose from "mongoose";
+
+
+const userSchema = new mongoose.Schema(
+
+{
+    username:{
+        type:String,
+        required:true,
+        unique:true
+    },
+
+
+    email:{
+        type:String,
+        required:true,
+        unique:true
+    },
+
+
+    password:{
+        type:String,
+        required:true
+    }
+
+},
+
+{
+    timestamps:true
+}
+
+);
+
+
+
+export default mongoose.model(
+    "User",
+    userSchema
+);
