# library-management-api/routes/authRoutes.js
@@ -1,0 +1,39 @@
+import express from "express";
+
+
+import {
+
+register,
+login,
+logout
+
+} from "../controllers/authController.js";
+
+
+
+const router = express.Router();
+
+
+
+router.post(
+    "/register",
+    register
+);
+
+
+
+router.post(
+    "/login",
+    login
+);
+
+
+
+router.post(
+    "/logout",
+    logout
+);
+
+
+
+export default router;
